# tibia-api

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test-dev.yml
requirements/: base.txt  dev.txt
src/bazaar/spiders/: auctions.py  skeleton.md
src/bazaar/spiders/auctions/: current.py  enums.py  helpers.py  models.py  schemas.py
tests/data/: auction.html  current_auctions.json
