[tool.poetry]
name = "tibia-api"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
pydantic = "^1.8.2"
Scrapy = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest-mock = "^3.6.1"
pytest = "^6.2.5"
flake8 = "^4.0.1"
black = "^21.10b0"
tox = "^3.24.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
