[tool.poetry]
name = "bazaar"
version = "0.1.0"
description = ""
authors = ["Parpinelli"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
pydantic = "^1.8.2"
Scrapy = "^2.5.1"
uvicorn = {extras = ["standard"], version = "^0.15.0"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"
flake8 = "^4.0.1"
black = "^21.10b0"
tox = "^3.24.4"
mypy = "^0.910"
pre-commit = "^2.15.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=bazaar"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
