[metadata]
name = bazaar
description = An API for the Tibia Character Bazaar
author = Guilherme Parpinelli
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    bazaar
install_requires =
    fastapi>=0.7
    pydantic>=1.8
    Scrapy>=2.5
    uvicorn>=0.15
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
bazaar = py.typed
