[metadata]
name = bazaar
description = An API for the Tibia Character Bazaar
author = Guilherme Parpinelli
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8

[options]
packages =
    bazaar
install_requires =
    fastapi>=0.7
    pydantic>=1.8
    Scrapy>=2.5
    uvicorn>=0.15
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=3.0
    pytest-mock>=3.6
    mypy>=0.910
    flake8>=4.0
    tox>=3.24

[options.package_data]
bazaar = py.typed
